--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "1.1.0",
   "description": "Server route handler for http-hash",
   "keywords": [],
+  "license": "ISC",
   "author": "Matt Esch <matt@mattesch.info>",
   "repository": {
     "type": "git",
     "url": "git://github.com/Matt-Esch/http-hash-router.git"
   },
   "dependencies": {
-    "error": "^5.0.0",
-    "http-hash": "^1.0.2",
+    "error": "^7.0.2",
+    "http-hash": "^2.0.0",
     "http-methods": "^1.0.0",
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "istanbul": "^0.3.5",
-    "opn": "^1.0.1",
-    "tape": "^3.0.3",
+    "istanbul": "^0.4.5",
+    "opn": "^4.0.2",
+    "tape": "^4.6.2",
     "test-server-request": "^2.0.1"
   },
   "scripts": {
