--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-hash-router",
+  "name": "@bret/http-hash-router",
   "version": "1.1.1",
   "description": "Server route handler for http-hash",
   "keywords": [],
