--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "istanbul": "^0.4.5",
     "opn": "^4.0.2",
     "tape": "^4.6.2",
-    "test-server-request": "^2.0.1"
+    "test-server-request": "^2.0.1",
+    "http-hash-router": "^1.1.0"
   },
   "scripts": {
     "test": "istanbul cover --print detail --report html test/index.js",
