--- a/package.json
+++ b/package.json
@@ -17,17 +17,13 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "greenkeeper-postpublish": "^1.0.1",
-    "istanbul": "^0.4.5",
     "opn": "^4.0.2",
     "tape": "^4.6.2",
     "test-server-request": "^2.0.1",
     "http-hash-router": "^1.1.0"
   },
   "scripts": {
-    "test": "istanbul cover --print detail --report html test/index.js",
-    "view-cover": "opn coverage/index.html",
-    "postpublish": "greenkeeper-postpublish"
+    "test": "tape test/*.js"
   },
   "main": "index"
 }
