--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   "dependencies": {
     "error": "^7.0.2",
     "http-hash": "^2.0.1",
-    "http-methods": "^1.0.0",
+    "http-methods": "^1.1.0",
     "introspect": "0.0.3",
-    "xtend": "^4.0.0"
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
-    "opn": "^4.0.2",
-    "tape": "^4.6.2",
-    "test-server-request": "^2.0.1",
-    "http-hash-router": "^1.1.0"
+    "tape": "^4.11.0",
+    "test-server-request": "^3.0.0"
   },
   "scripts": {
     "test": "tape test/*.js"
